@@ -1,10 +1,0 @@
-require File.dirname(__FILE__) + '<%= '/..' * class_nesting_depth %>/../test_helper'
-
-class <%= class_name %>Test < Test::Unit::TestCase
-  fixtures :<%= table_name %>
-
-  # Replace this with your real tests.
-  def test_truth
-    assert true
-  end
-end
